# green-city

./: .env.example  README.md  add_challenges.py  add_eco_tips.py  add_green_zones.py  add_trees.py  build.sh  config.py  create_migration.py  manage.py  migrate.sh  pyproject.toml  requirements.txt  restart_server.sh  set_admin.py  wsgi.py
app/: __init__.py  cli.py  forms.py  models.py
app/admin/: __init__.py  forms.py  routes.py
app/api/: routes.py
app/auth/: __init__.py  routes.py
app/main/: __init__.py  routes.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  challenges.html  events.html  index.html  map.html  tips.html  trees.html
app/templates/admin/: assign_admin.html  challenge_form.html  challenges.html  dashboard.html  event_form.html  events.html  password_check.html  tip_form.html  tips.html  users.html
app/templates/auth/: login.html  register.html
migrations/versions/: 1b71dc5caa2f_update_tree_model_with_more_attributes.py  20090c262beb_add_ecochallenge_model_and_user_.py  4862264b6e14_initial_migration.py  a87246d45936_add_ecochallenge_model.py  ba36ab65222d_add_greenzone_model.py  f2b20b1f64a6_add_ecotip_model.py
